# road-vehicle-analytics

./: .gitignore  README.md  ppt_content.md  publishing_guide.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
configs/: botsort_moving.yaml
data/: video_inventory_template.csv
data/ground_truth/: counts_template.csv
src/road_analytics/: __init__.py  annotation.py  classifier.py  cleaning.py  cli.py  config.py  counting.py  default.yaml  eda.py  evaluation.py  extraction.py  features.py  pipeline.py  review.py  rule_classification.py  schema.py  synthetic.py  visualization.py
tests/: test_analytics.py  test_pipeline.py  test_visualization.py
