[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "road-vehicle-analytics"
version = "0.1.0"
description = "Video-to-insight pipeline for vehicle counting and road-type classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
vision = ["ultralytics>=8.2", "opencv-python>=4.8", "lap>=0.5.12"]
dashboard = ["streamlit>=1.35"]
dev = ["pytest>=8.0"]

[project.scripts]
road-analytics = "road_analytics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
road_analytics = ["*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
